--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <p>&nbsp;</p>
 
-<center><img src="https://i.kym-cdn.com/entries/icons/facebook/000/023/098/Screen_Shot_2017-05-30_at_2.23.51_PM.jpg" width="265" height="266" align="BOTTOM" /></center><hr />
-
-<p style="text-align: center;"><a href="https://www.kodak.com/corp/default.htm">Click Here</a> to go to my favorite site</p>
-
 <h1 style="text-align: center;">My name is Ryan Gordon</h1>
 
 <h2 style="text-align: center;">Welcome to my site!</h2>
 
-<body bgcolor = "LightSkyBlue">
+
+<center><img src="https://www.facebook.com/photo.php?fbid=1447941335318375&set=pb.100003075675816.-2207520000.1555963207.&type=3&theater" width="265" height="266" align="BOTTOM" /></center><hr />
+
+
+<body bgcolor = Linear-Gradient(Blue, Green) >
+
 
 <p><strong>About Me</strong></p>
 
-<p>This is a new paragraph! <br /><br /></p>
+<p>I am a freshman at the University of Texas at Austin studying in the McCombs School of Business. I am originally from Chappaqua, New York and attended Horace Greeley High School. One of my interests outside of school are cars. <br /><br /></p>
 
+  
 </body>
 
+
 <hr />
+
+<p><strong>My favorite website</strong></p>
+
+<p style="text-align: center;"><a href="https://www.yahoo.com/">Click Here</a> to go to my favorite site</p>
+
