--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <p><strong>About Me</strong></p>
 
-<p>I am a freshman at the University of Texas at Austin studying in the McCombs School of Business. I am originally from Chappaqua, New York and attended Horace Greeley High School. One of my interests outside of school are cars. <br /><br /></p>
+<p>I am a freshman at the University of Texas at Austin studying in the McCombs School of Business. I am originally from Chappaqua, New York and attended Horace Greeley High School. One of my biggest interests outside of school is football. <br /><br /></p>
 
   
 </body>
