--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <center><img src="https://www.facebook.com/photo.php?fbid=1447941335318375&set=pb.100003075675816.-2207520000.1555963207.&type=3&theater" width="265" height="266" align="BOTTOM" /></center><hr />
 
 
-<body bgcolor = Linear-Gradient(Blue, Green) >
+<body bgcolor = Linear-Gradient(Orange, Blue) >
 
 
 <p><strong>About Me</strong></p>
