--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2 style="text-align: center;">Welcome to my site!</h2>
 
 
-<center><img src="https://www.facebook.com/photo.php?fbid=1447941335318375&set=pb.100003075675816.-2207520000.1555963207.&type=3&theater" width="265" height="266" align="BOTTOM" /></center><hr />
+<center><img src="Ryan Gordon.jpg" width="265" height="266" align="BOTTOM" /></center><hr />
 
 
 <body bgcolor = Linear-Gradient(Orange, Blue) >
