--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2 style="text-align: center;">Welcome to my site!</h2>
 
 
-<center><img src="https://www.facebook.com/photo.php?fbid=1447941335318375&set=pb.100003075675816.-2207520000.1555963207.&type=3&theater" width="265" height="266" align="BOTTOM" /></center><hr />
+<center><img src="https://scontent.fftw1-1.fna.fbcdn.net/v/t31.0-8/23215564_1447941335318375_2352671641744124172_o.jpg?_nc_cat=105&_nc_ht=scontent.fftw1-1.fna&oh=d75b7dbacc3edb0de1b84e2e96097ca2&oe=5D36EA6C" width="265" height="266" align="BOTTOM" /></center><hr />
 
 
 <body bgcolor = Linear-Gradient(Orange, White) >
